--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* styling common to all pages */
 /* push the footer to the bottom */
 * {
 	margin: 0;
@@ -44,7 +45,6 @@ h2 {
 header{
 	border-bottom: 3px solid #cccccc;
 	height: 80px;
-	/*padding: 0 14.85%;*/
 	background-color: #ffffff;
 	overflow: auto;
 }
@@ -69,26 +69,8 @@ footer {
 	width: 100%;
 	color: #ffffff;
 	text-align: center;
+	/*sets two-two footer background */
 	background: linear-gradient(to bottom, #4aaaa5 0%, #4aaaa5 15%,#000000 15%, #666666 15%, #666666 100%);
-}
-
-form {
-	margin: 0 25px;
-}
-
-.textBox, .textArea {
-	width: 100%;
-	margin: 10px 200px 10px 0;
-	
-}
-
-.textBox {
-	line-height: 20px;
-}
-
-.textArea {
-	display: block;
-	height: 250px;
 }
 
 .mainBody {
@@ -112,15 +94,6 @@ form {
 	height: auto;
 	padding: 0 2px;
 	margin: 5px 0 15px 10px;
-}
-
-#submitButton {
-	background: #4aaaa5;
-	border: none;
-	margin-bottom: 25px;
-	color: #ffffff;
-	font-size: 18px;
-	padding: 10px 15px;
 }
 
 #mainHeading {
@@ -157,6 +130,41 @@ form {
 	border-right: thin solid lightgray;
 }
 
+/* Individual page components start here */
+
+/*contact page*/
+
+form {
+	margin: 0 25px;
+}
+
+.textBox, .textArea {
+	width: 100%;
+	margin: 10px 200px 10px 0;
+	
+}
+
+.textBox {
+	line-height: 20px;
+}
+
+.textArea {
+	display: block;
+	height: 250px;
+}
+
+
+#submitButton {
+	background: #4aaaa5;
+	border: none;
+	margin-bottom: 25px;
+	color: #ffffff;
+	font-size: 18px;
+	padding: 10px 15px;
+}
+
+/*About me page*/
+
 #self {
 	float: left;
 	height: auto;
@@ -168,6 +176,8 @@ form {
 	margin: 0 25px 25px;
 	line-height: 150%;
 }
+
+/*portfolio page*/
  
 .container {
 	width: 270px;
@@ -188,17 +198,10 @@ form {
 	left: 0;
 	top: 80%;
 	z-index: 45;
-	/*margin-top: 214px;*/
 }
 
 .thumbnails {
 	width: 100%;
-	/*position: absolute;
-	left:0;
-	top: 0;*/
-	/*border: 2px solid #cccccc;
-	margin: 0px 25px 25px;
-	float: left;*/
 }
 
 /*media queries*/
@@ -396,8 +399,7 @@ form {
 		height: 100%;
 		margin: 25px 4%;
 		float: none;
-		background-repeat: no-repeat;
-		background-size: 100%;
+
 	}
 
 	.captions {
