Added components to make this a proper portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,7 @@ form {
  
 .container {
 	width: 270px;
+	height: auto;
 	overflow: auto;
 	position: relative;
 	margin: 25px 25px;
@@ -202,6 +203,7 @@ form {
 
 .thumbnails {
 	width: 100%;
+	height: auto;
 }
 
 /*media queries*/
